--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
